tests/snapshots/examples_fixtures/type_system__failing__114_keyword_alias_case.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/114_keyword_alias_case.flx
== compile ==
failed (parse)
== diagnostics ==
error[E030]: Unknown Keyword

Unknown keyword `case`. Flux uses `match` for pattern matching.

  examples/type_system/failing/114_keyword_alias_case.flx:24:5
   |
24 |     case 1 {
   |     ^^^^

Hint:
  Did you mean `match`?

Note:
  while parsing function `main`
== stdout ==
<not executed>
